# MonoBot

./: .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: deploy.yml
deploy/: README.md  monobot.service  update.sh
main/: MonoBot.py  checks.py  context.py  views.py
main/cogs/: identity.py  leaderboard.py  matchmaking.py  misc.py  pubs.py  replays.py
main/models/: config.py  matchmaking.py  rating.py  replay.py
main/resources/: config.example.json  config.py
main/services/: achievements.py  awards.py  match_embeds.py  matchmaking.py  rating.py  replay_parser.py  storage.py
main/services/achievements/: __init__.py  core.py  engine.py  specs.py
scripts/: backfill_archive.py  baseless_wins.py  compare_rating_models.py  reparse_stored.py  split_pubs.py
tests/: conftest.py  test_achievement_display.py  test_achievements.py  test_identity.py  test_matchmaking.py  test_rating.py  test_replay_parser.py  test_storage.py  test_winner_inference.py
