[project]
name = "monobot"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "discord-py>=2.7.1",
    "openskill>=6.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sc2reader>=1.9.0",
]

[tool.ruff]
target-version = "py314"
line-length = 120
extend-exclude = ["venv", ".venv", "scratch"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
